--- a/src/main/webapp/resources/core/css/perfil.css
+++ b/src/main/webapp/resources/core/css/perfil.css
@@ -48,7 +48,20 @@ body{
     width: 3.5rem;
 }
 .img-avatar-size {
+    max-width: 70% !important;
     padding-bottom: 5px;
+}
+.bottomSpace{
+    margin-bottom: 8px !important;
+}
+.dateInfo{
+    color: #FFC868 !important;
+    font-weight: 700 !important;
+    font-size: 1rem !important;
+    line-height: 1;
+}
+.list-group-item {
+    border: 0px !important;
 }
 .rounded-circle {
     border-radius: 50%!important;
