--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
@@ -175,7 +175,7 @@
                                         </div>
                                         <div class="col-lg-10 d-block">
                                             <div class="card-header no-border">
-                                                <div class="col-lg-4 card-body">
+                                                <div class="col-lg-5 card-body">
                                                     <div class="widget-49-title-wrapper">
                                                         <div class="widget-49-meeting-time">
                                                             <div class="widget-49-date-warning">
@@ -207,12 +207,12 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-6 card-body">
+                                                <div class="col-lg-5 card-body">
                                                     <div class="widget-49-title-wrapper">
                                                         <div class="widget-49-meeting-time">
                                                             <div class="widget-49-date-warning">
                                                                 <div class="flex-row">
-                                                                    <span class="widget-49-pro-title">Descripción: </span>
+                                                                    <span class="widget-49-pro-title">Descripción del viaje: </span>
                                                                     <span class="widget-49-pro-title" th:text="${viaje.descripcion}"></span>
                                                                 </div>
                                                             </div>
