--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
@@ -224,6 +224,8 @@
                                     </div>
                             </div>
 
+
+                        <!-- SIN USO -->
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="trending-ads-slide">
