--- a/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
@@ -49,7 +49,7 @@
                 <div style="margin-top:50px;" class="border mb-30 ms-0  ">
                     <h3 class="bg-gray p-4">Crear Nuevo Viaje</h3>
                     <form class="p-3" action="#" th:action="@{/creacion}" th:object="${viaje}" method="POST">
-                        <label >
+                        <label>
                         <select name="origen.id" th:field="${viaje.origen.id}" >
                             <option value="">-- Selecciona una ciudad de Origen --</option>
                             <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre}+ ','+${ciudad.provincia.nombre}"></option>
@@ -63,8 +63,8 @@
                             </select>
                         </label>
                         <br>
-                        <label for="fecha_hora">Fecha y Hora:</label>
-                        <input type="datetime-local" id="fecha_hora" name="fecha_hora" th:field="*{fecha_hora}" />
+                        <label for="fecha">Fecha y Hora:</label>
+                        <input type="date" id="fecha" name="fecha" th:field="*{fecha}" />
                         <br>
                         <label for="cantidad">Cantidad de pasajeros:</label>
                         <input type="number" id="cantidad" name="cantidad" th:field="*{cantidad}" />
