--- a/src/main/webapp/WEB-INF/views/thymeleaf/provinciaDetalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/provinciaDetalle.html
@@ -60,7 +60,7 @@
                                 </div>
                                 <div><h5 class="card-title" th:text="${viaje.usuario.nombre}"></h5></div>
                                 <!--TODO ver el tema del formato de la fecha, ya que salta error porque es String-->
-                                <div><p class="card-text" th:text="'Fecha de Salida: ' + ${viaje.fecha_hora}"></p>
+                                <div><p class="card-text" th:text="'Fecha de Salida: ' + ${viaje.fecha}"></p>
                                 </div>
 
                             </div>
@@ -78,7 +78,7 @@
                             </ul>
                             <div class="card-body">
                                 <a th:href="@{/ver-viaje(id=${viaje.id})}" class="card-link">Mas Info</a>
-                                <a th:href="@{/perfil/usuario(email= ${viaje.usuario.email})}" class="card-link">Ver Perfil</a>
+                                <a th:href="@{/perfil/usuario(idUsuario= ${viaje.usuario.id})}" class="card-link">Ver Perfil</a>
                             </div>
                         </div>
                     </div>
