se agrega ignore para arreglar el buscador, y se cambia campo fecha_hora a fecha en las vistas

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -68,23 +68,23 @@
                                         <div class="form-row">
                                             <div class="form-group col-lg-3 col-md-6" >
                                                 <label>
-                                            <select name="origen" th:field="${busqueda.origen}">
+                                            <select class="ignore" name="origen" th:field="*{origen}">
                                                 <option value="">--Seleccione Origen--</option>
-                                                <option th:each="origen : ${listaCiudades}" th:value="${origen.id}" th:text="${origen.nombre} + ', ' + ${origen.provincia.nombre}"></option>
+                                                <option th:each="origen : ${listaCiudades}" th:value="${origen}" th:text="${origen.nombre} + ', ' + ${origen.provincia.nombre}"></option>
                                             </select>
                                                 </label>
                                             </div>
                                             <div class="form-group col-lg-3 col-md-6">
                                                 <label>
-                                                <select name="destino" th:field="${busqueda.destino}">
+                                                <select class="ignore dropdown" name="destino" th:field="*{destino}">
                                                     <option value="">-- Seleccione Destino --</option>
-                                                    <option th:each="destino : ${listaCiudades}"  th:value="${destino}" th:text="${destino.nombre} + ', ' + ${destino.provincia.nombre}"></option>
+                                                    <option class="dropdown-item" th:each="destino : ${listaCiudades}"  th:value="${destino}" th:text="${destino.nombre} + ', ' + ${destino.provincia.nombre}"></option>
                                                 </select>
                                                 </label>
                                             </div>
                                             <div class="form-group col-lg-3 col-md-6">
                                                 <label for="fecha">
-                                                <input type="date" id="fecha" name="fecha" th:field="*{fecha}"/>
+                                                <input class="" type="date" id="fecha" name="fecha" th:field="*{fecha}"/>
                                                 </label>
                                             </div>
                                             <div class="form-group col-xl-2 col-lg-3 col-md-6 align-self-center">
