--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
@@ -166,7 +166,7 @@
                                                             </div>
                                                             <div class="widget-49-date-warning">
                                                                 <span class="widget-49-pro-title dateInfo">Fecha de salida: </span>
-                                                                <span class="widget-49-pro-title" th:text="${viaje.fecha_hora}"></span>
+                                                                <span class="widget-49-pro-title" th:text="${viaje.fecha}"></span>
                                                             </div>
                                                             <div class="widget-49-date-warning">
                                                                 <span class="widget-49-pro-title">Lugares disponibles: </span>
