--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -83,7 +83,7 @@
                                                 </label>
                                             </div>
                                             <div class="form-group col-lg-3 col-md-6">
-                                                <label for="fecha">
+                                                <label>
                                                 <input class="" type="date" id="fecha" name="fecha" th:field="*{fecha}"/>
                                                 </label>
                                             </div>
