Se corrige label en crear viaje ahora es Fecha:

--- a/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/crear-viaje.html
@@ -52,7 +52,7 @@
                             </select>
                         </label>
                         <br>
-                        <label for="fecha">Fecha y Hora:</label>
+                        <label for="fecha">Fecha:</label>
                         <input type="date" id="fecha" name="fecha" th:field="*{fecha}" />
                         <br>
                         <label for="cantidad">Cantidad de pasajeros:</label>
