--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil/perfil.html
@@ -221,7 +221,7 @@
                                                     </div>
 
                                                     <div><h5 class="card-title" th:text="${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"></h5></div>
-                                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${viaje.fecha_hora}"></p>
+                                                    <div><p class="card-text" th:text="'Fecha de Salida: ' + ${viaje.fecha}"></p>
                                                     </div>
 
                                                 </div>
