--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -20,8 +20,8 @@
     <link th:href="@{/plugins/jquery-nice-select/css/nice-select.css}" rel="stylesheet">
 
     <!-- Use Thymeleaf expressions for JavaScript URLs -->
-    <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
-    <script th:src="@{/plugins/bootstrap/popper.min.js}"></script>
+   <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
+     <script th:src="@{/plugins/bootstrap/popper.min.js}"></script>
     <script th:src="@{/plugins/bootstrap/bootstrap.min.js}"></script>
     <script th:src="@{/plugins/bootstrap/bootstrap-slider.js}"></script>
     <script th:src="@{/plugins/tether/js/tether.min.js}"></script>
@@ -33,11 +33,10 @@
 
     <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
     <link th:href="@{/css/style.css}" rel="stylesheet">
-    <script th:src="@{/js/script.js}"></script>
+<!--    <script th:src="@{/js/script.js}"></script>-->
 </head>
 
 <body class="body-wrapper">
-
 <header>
 
     <div th:if="${session != null ? session.isLogged : false}">
@@ -64,35 +63,39 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-12 col-md-12 align-content-center">
-                                <form  th:action="@{/buscar-viaje}" method="POST">
+                                <form action="#" th:action="@{/buscar-viaje}" th:object="${viajeBuscado}" method="POST">
                                     <div class="form-row">
                                         <div class="form-group col-lg-3 col-md-6">
-                                        <label for="origen">Origen:</label>
-                                        <select id="origen" name="origen">
-                                            <option value="">-- Seleccione Origen --</option>
-                                            <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
-                                        </select>
-                                        </div>
-                                        <div class="form-group col-lg-3 col-md-6">
-                                            <label for="destino">Destino:</label>
-                                            <select id="destino" name="destino">
-                                                <option value="">-- Seleccione Destino --</option>
-                                                <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.id} + ', ' + ${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
+                                            <label for="origen">Origen:</label>
+                                            <select id="origen" class="campo-formulario" th:field="*{origen.id}">
+                                                <option value="">-- Seleccione Origen --</option>
+                                                <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
                                             </select>
                                         </div>
                                         <div class="form-group col-lg-3 col-md-6">
-                                            <label for="fecha_hora">Fecha:</label>
-                                            <input type="text" id="fecha_hora" name="fecha_hora"/>
+                                            <label for="destino">Destino:</label>
+                                            <select id="destino" class="campo-formulario" th:field="*{destino.id}">
+                                                <option value="">-- Seleccione Destino --</option>
+                                                <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
+                                            </select>
                                         </div>
-                                        <div class="form-group col-xl-2 col-lg-3 col-md-6 align-self-center">
-                                            <button type="submit" class="btn btn-primary active w-100">Buscar Viaje
-                                            </button>
+                                        <div class="form-group col-lg-3 col-md-6">
+                                            <label for="fecha">Fecha:</label>
+                                            <input type="date" id="fecha" th:field="*{fecha}" pattern="dd-MM-yyyy"/>
                                         </div>
+                                        <button type="submit" class="btn btn-primary active w-100">Buscar Viaje
+                                        </button>
                                     </div>
                                 </form>
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div th:if="${filtroBuscado != null}">
+                    <span th:text="${filtroBuscado.destino.id}"></span>
+                    <span th:text="${filtroBuscado.origen.id}"></span>
+                    <span th:text="${filtroBuscado.fecha}"></span>
                 </div>
             </div>
         </div>
@@ -237,7 +240,6 @@
         <i class="fa fa-angle-up"></i>
     </div>
 </footer>
-
 <script src="plugins/jquery/jquery.min.js"></script>
 <script src="plugins/bootstrap/popper.min.js"></script>
 <script src="plugins/bootstrap/bootstrap.min.js"></script>
@@ -248,9 +250,7 @@
 <script src="plugins/jquery-nice-select/js/jquery.nice-select.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
 <script src="plugins/google-map/map.js" defer></script>
-
 <script th:src="@{js/script.js}"></script>
-
 </body>
 
 </html>
