--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -2,48 +2,81 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <title>viaje seleccionado</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" th:href="@{/css/viaje.css}">
+  <title th:text="'Viaje creado por ' + ${viaje.usuario.nombre + ' ' + viaje.usuario.apellido}"></title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Use Thymeleaf expressions for CSS URLs -->
+  <link th:href="@{/plugins/nerd-fonts/css/nerd-fonts.css}" rel="stylesheet">
+  <link th:href="@{/plugins/bootstrap/bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{/plugins/bootstrap/bootstrap-slider.css}" rel="stylesheet">
+  <link th:href="@{/plugins/slick/slick.css}" rel="stylesheet">
+  <link th:href="@{/plugins/slick/slick-theme.css}" rel="stylesheet">
+  <link th:href="@{/plugins/jquery-nice-select/css/nice-select.css}" rel="stylesheet">
+
+  <!-- Use Thymeleaf expressions for JavaScript URLs -->
+  <script th:src="@{/plugins/jquery/jquery.min.js}"></script>
+  <script th:src="@{/plugins/bootstrap/popper.min.js}"></script>
+  <script th:src="@{/plugins/bootstrap/bootstrap.min.js}"></script>
+  <script th:src="@{/plugins/bootstrap/bootstrap-slider.js}"></script>
+  <script th:src="@{/plugins/tether/js/tether.min.js}"></script>
+  <script th:src="@{/plugins/raty/jquery.raty-fa.js}"></script>
+  <script th:src="@{/plugins/slick/slick.min.js}"></script>
+  <script th:src="@{/plugins/jquery-nice-select/js/jquery.nice-select.min.js}"></script>
+  <script th:src="@{/plugins/google-map/map.js}" defer></script>
+  <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
+
+  <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
   <link th:href="@{/css/style.css}" rel="stylesheet">
   <script th:src="@{/js/script.js}"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{/css/perfil.css}" rel="stylesheet">
+  <link th:href="@{/css/viaje.css}" rel="stylesheet">
 </head>
 <body>
 <header>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-light navigation">
-          <button class="navbar-toggler" type="button" data-toggle="collapse"
-                  data-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto main-nav ">
-              <li class="nav-item active">
-                <a class="nav-link" href="home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="nuevo-usuario">Perfil</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav ml-auto mt-10">
-              <li class="nav-item">
-                <a class="nav-link login-button" th:href="@{/login}">Login</a>
-              </li>
-            </ul>
-            <ul class="navbar-nav ml-auto mt-10">
-              <li>
-                <a class="nav-link bg-danger p-3" th:href="@{/crear-viaje}">Crear Viaje</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </div>
+  <div th:if="${session != null ? session.isLogged : false}">
+    <!-- Fragmento de barra de navegación para usuarios autenticados -->
+    <div th:replace="navbar-user"></div>
+  </div>
+  <div th:unless="${session != null ? session.isLogged : false}">
+    <!-- Fragmento de barra de navegación para invitados -->
+    <div th:replace="navbar-guest"></div>
   </div>
 </header>
+
+
+
+<div class="container">
+
+<div class="card mb-3" >
+  <!--<img class="card-img-top" src="..." alt="Card image cap">-->
+  <div class="card-body">
+    <div th:each="viaje : ${viajes}">
+      <h2>test</h2>
+    <h1 class="card-title" th:text="'Viaje creado por ' + ${viaje.usuario.nombre + ' ' + usuario.apellido}"></h1>
+    <h3 class="card-text">Origen</h3>
+    <p class="card-text" th:text="${viaje.origen.provincia.nombre} + ', ' + ${viaje.origen.nombre}"></p>
+    <h3 class="card-text">Destino</h3>
+    <p class="card-text" th:text="${viaje.destino.provincia.nombre} + ', ' + ${viaje.destino.nombre}"></p>
+    <h3 class="card-text">Fecha de salida</h3>
+    <p class="card-text" th:text="${viaje.fecha}"></p>
+    <h3 class="card-text">Lugares disponibles</h3>
+    <p class="card-text" th:text="${viaje.cantidad}"></p>
+    <h3 class="card-text">Tiempo de viaje</h3>
+    <p class="card-text">6 horas</p>
+    <h3 class="card-text">Descripción</h3>
+    <p class="card-text" th:text="${viaje.descripcion}"></p>
+
+    <a href="#" class="btn btn-secondary">Conectar</a>
+    <p class="card-text"><small class="text-muted">Última actualización: hace 10 minutos</small></p>
+    </div>
+  </div>
+</div>
+
+</div>
+<!--
 <span th:text="${'Viaje: ' + viaje.destino.nombre+', '+viaje.destino.provincia.nombre + ' - '
                               + viaje.origen.nombre + ', '+viaje.origen.provincia.nombre}"></span>
 <div class="container">
@@ -131,7 +164,8 @@
       </div>
     </div>
   </div>
-</div>
+</div>-->
+
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript">
