--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -34,7 +34,7 @@
   <link th:href="@{/css/perfil.css}" rel="stylesheet">
   <link th:href="@{/css/viaje.css}" rel="stylesheet">
 </head>
-<body>
+<body class="body-wrapper">
 <header>
   <div th:if="${session != null ? session.isLogged : false}">
     <!-- Fragmento de barra de navegación para usuarios autenticados -->
@@ -47,33 +47,43 @@
 </header>
 
 <div class="container">
-  <div class="row">
     <div class="card mb-3">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <div th:each="viajes : ${viajes}">
-          <h3 class="card-title" th:text="'Viaje creado por ' + ${viajes.usuario.nombre + ' ' + viajes.usuario.apellido}"></h3>
-          <h5 class="card-text">Origen</h5>
-          <p class="card-text" th:text="${viajes.origen.provincia.nombre} + ', ' + ${viajes.origen.nombre}"></p>
-          <h53 class="card-text">Destino</h53>
-          <p class="card-text" th:text="${viajes.destino.provincia.nombre} + ', ' + ${viajes.destino.nombre}"></p>
-          <h5 class="card-text">Fecha de salida</h5>
-          <p class="card-text" th:text="${viajes.fecha}"></p>
-          <h5 class="card-text">Lugares disponibles</h5>
-          <p class="card-text" th:text="${viajes.cantidad}"></p>
-          <h5 class="card-text">Tiempo de viaje</h5>
-          <p class="card-text">6 horas</p>
-          <h5 class="card-text">Descripción</h5>
-          <p class="card-text" th:text="${viajes.descripcion}"></p>
-          <p class="card-text"><small class="text-muted">Última actualización: hace 10 minutos</small></p>
-          <a href="#" class="btn btn-secondary">Conectar</a>
+      <img class="card-img-top bottomSpace" th:src="${viajes.destino.background}" height="280" alt="Imagen descriptiva del destino del viaje">
+        <h1 class="card-title text-center" th:text="'Viaje creado por ' + ${viajes.usuario.nombre + ' ' + viajes.usuario.apellido}">
+          <a th:href="@{/perfil/usuario(idUsuario= ${viajes.usuario.id})}"></a>
+        </h1>
+      <!--<h5 class="card-text">Descripción</h5>-->
+      <p class="card-text text-center topSpace" th:text="${viajes.descripcion}"></p>
+      <div class="card-body row row-cols-2" th:each="viajes : ${viajes}">
+          <div class="col text-center">
+            <h5 class="card-text">Origen</h5>
+            <p class="card-text" th:text="${viajes.origen.provincia.nombre} + ', ' + ${viajes.origen.nombre}"></p>
+            <h5 class="card-text">Fecha de salida</h5>
+            <p class="card-text" th:text="${viajes.fecha}"></p>
+            <h5 class="card-text">Condiciones</h5>
+            <li class="list-group-item">
+              <i class="fa-solid fa-paw fa-lg"></i>
+              <i class="fa-solid fa-ban-smoking fa-lg"></i>
+              <i class="fa-solid fa-guitar fa-lg"></i>
+              <i class="fa-solid fa-baby-carriage fa-lg"></i>
+            </li>
+          </div>
+          <div class="col text-center">
+            <h5 class="card-text">Destino</h5>
+            <p class="card-text" th:text="${viajes.destino.provincia.nombre} + ', ' + ${viajes.destino.nombre}"></p>
+            <h5 class="card-text">Tiempo de viaje</h5>
+            <p class="card-text">6 horas</p>
+            <h5 class="card-text">Lugares disponibles</h5>
+            <p class="card-text" th:text="${viajes.cantidad}"></p>
           </div>
         </div>
+        <p class="card-text text-center topSpace"><small class="text-muted">Última actualización: hace 2 días</small></p>
+        <div class="d-flex justify-content-center">
+          <a href="#" class="btn btn-secondary bottomSpace">Conectar</a>
+        </div>
       </div>
-    </div>
   </div>
 </div>
-
 
 <!--
 <span th:text="${'Viaje: ' + viaje.destino.nombre+', '+viaje.destino.provincia.nombre + ' - '
