--- a/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/viaje/viaje.html
@@ -26,7 +26,7 @@
   <script src="https://kit.fontawesome.com/90ab493dae.js" crossorigin="anonymous"></script>
 
   <!-- Use Thymeleaf expressions for your custom CSS and JavaScript -->
-  <link th:href="@{/css/style.css}" rel="stylesheet">
+  <!--<link th:href="@{/css/style.css}" rel="stylesheet">-->
   <script th:src="@{/js/script.js}"></script>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/5.3.45/css/materialdesignicons.css" integrity="sha256-NAxhqDvtY0l4xn+YVa6WjAcmd94NNfttjNsDmNatFVc=" crossorigin="anonymous" />
@@ -49,9 +49,7 @@
 <div class="container">
     <div class="card mb-3">
       <img class="card-img-top bottomSpace" th:src="${viajes.destino.background}" height="280" alt="Imagen descriptiva del destino del viaje">
-        <h1 class="card-title text-center" th:text="'Viaje creado por ' + ${viajes.usuario.nombre + ' ' + viajes.usuario.apellido}">
-          <a th:href="@{/perfil/usuario(idUsuario= ${viajes.usuario.id})}"></a>
-        </h1>
+      <h1 class="card-title text-center" th:text="'Viaje creado por ' + ${viajes.usuario.nombre + ' ' + viajes.usuario.apellido}"></h1>
       <!--<h5 class="card-text">Descripción</h5>-->
       <p class="card-text text-center topSpace" th:text="${viajes.descripcion}"></p>
       <div class="card-body row row-cols-2" th:each="viajes : ${viajes}">
@@ -79,6 +77,7 @@
         </div>
         <p class="card-text text-center topSpace"><small class="text-muted">Última actualización: hace 2 días</small></p>
         <div class="d-flex justify-content-center">
+          <a th:href="@{/perfil/usuario(idUsuario= ${viajes.usuario.id})}" class="btn btn-primary bottomSpace rightSpace">Ver perfil</a>
           <a href="#" class="btn btn-secondary bottomSpace">Conectar</a>
         </div>
       </div>
