--- a/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -8,25 +8,14 @@
   <link th:href="@{css/registro.css}" rel="stylesheet">
 </head>
 <body class="container-body">
-<header class="header">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-light navigation">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto main-nav ">
-              <li class="nav-item @@home">
-                <a class="nav-link login-button" th:href="@{/home}">Home</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </div>
+<header>
+  <div th:if="${session != null ? session.isLogged : false}">
+    <!-- Fragmento de barra de navegación para usuarios autenticados -->
+    <div th:replace="navbar-user"></div>
+  </div>
+  <div th:unless="${session != null ? session.isLogged : false}">
+    <!-- Fragmento de barra de navegación para invitados -->
+    <div th:replace="navbar-guest" class="bg-light"></div>
   </div>
 </header>
 <div class="container mt-2">
