--- a/src/main/webapp/resources/core/css/viaje.css
+++ b/src/main/webapp/resources/core/css/viaje.css
@@ -53,6 +53,12 @@ body{
     align-items: center;
     min-height: 50px;
 }
+.bg-darkness {
+    background-color: #7b8a97!important;
+}
+.spaceToHeaderFixed{
+    margin-top: 135px !important;
+}
 .bottomSpace{
     margin-bottom: 8px !important;
 }
