cambio color de fondo

--- a/src/main/webapp/resources/core/css/viaje.css
+++ b/src/main/webapp/resources/core/css/viaje.css
@@ -54,7 +54,7 @@ body{
     min-height: 50px;
 }
 .bg-darkness {
-    background-color: #7b8a97!important;
+    background-color: #a5b1b5!important;
 }
 .spaceToHeaderFixed{
     margin-top: 135px !important;
