--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -63,25 +63,25 @@
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-12 col-md-12 align-content-center">
-                                <form action="#" th:action="@{/buscar-viaje}" th:object="${viajeBuscado}" method="POST">
+                                <form action="#" th:action="@{/buscar-viaje}"  method="POST">
                                     <div class="form-row">
                                         <div class="form-group col-lg-3 col-md-6">
                                             <label for="origen">Origen:</label>
-                                            <select id="origen" class="campo-formulario" th:field="*{origen.id}">
+                                            <select id="origen" class="campo-formulario" name="origen" >
                                                 <option value="">-- Seleccione Origen --</option>
                                                 <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
                                             </select>
                                         </div>
                                         <div class="form-group col-lg-3 col-md-6">
                                             <label for="destino">Destino:</label>
-                                            <select id="destino" class="campo-formulario" th:field="*{destino.id}">
+                                            <select id="destino" name="destino" class="campo-formulario" >
                                                 <option value="">-- Seleccione Destino --</option>
                                                 <option th:each="ciudad : ${ciudades}" th:value="${ciudad.id}" th:text="${ciudad.nombre} + ', ' + ${ciudad.provincia.nombre}"></option>
                                             </select>
                                         </div>
                                         <div class="form-group col-lg-3 col-md-6">
                                             <label for="fecha">Fecha:</label>
-                                            <input type="date" id="fecha" th:field="*{fecha}" pattern="dd-MM-yyyy"/>
+                                            <input type="date" id="fecha" name="fecha" pattern="dd-MM-yyyy"/>
                                         </div>
                                         <button type="submit" class="btn btn-primary active w-100">Buscar Viaje
                                         </button>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
 
-                <div th:if="${filtroBuscado != null}">
+                <div th:if="${f != null}">
                     <span th:text="${filtroBuscado.destino.id}"></span>
                     <span th:text="${filtroBuscado.origen.id}"></span>
                     <span th:text="${filtroBuscado.fecha}"></span>
